[Feat] player 권한 확인 코드 추가
Signed-off-by: Jeong-Rae <kkwjdfo@gmail.com>